--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                         <span class="text-avatar">A</span>个人中心
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本资料</a></dd>
-                        <dd><a href="">更换头像</a></dd>
-                        <dd><a href="">重置密码</a></dd>
+                        <dd><a href="/user/user_info.html" target="fm">基本资料</a></dd>
+                        <dd><a href="/user/user_avatar.html" target="fm">更换头像</a></dd>
+                        <dd><a href="/user/user.pwd.html" target="fm">重置密码</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item" lay-header-event="menuRight" lay-unselect>
@@ -67,9 +67,9 @@
                     <li class="layui-nav-item">
                         <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-login-wechat"></i>基本资料</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-login-qq"></i>更换头像</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-login-weibo"></i>重置密码</a></dd>
+                            <dd><a href="user/user_info.html" target="fm"><i class="layui-icon layui-icon-login-wechat"></i>基本资料</a></dd>
+                            <dd><a href="user/user_avatar.html" target="fm"><i class="layui-icon layui-icon-login-qq"></i>更换头像</a></dd>
+                            <dd><a href="/user/user.pwd.html"><i class="layui-icon layui-icon-login-weibo"></i>重置密码</a></dd>
                         </dl>
                     </li>
                 </ul>
