--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <!-- 头部区域（可配合layui 已有的水平导航） -->
             <!-- 头部区域，调整了头像、个人中心、通过引入js让其有下拉菜单、退出，目前这块有三个小点不太清楚 -->
             <ul class="layui-nav layui-layout-right">
+
                 <li class="layui-nav-item layui-hide layui-show-md-inline-block">
                     <a href="javascript:;" class="userinfo">
                         <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
@@ -59,9 +60,9 @@
                     <li class="layui-nav-item">
                         <a class="" href="javascript:;"><span class="iconfont icon-16"></span>文章管理</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-login-wechat"></i>文章类别</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-login-qq"></i>文章列表</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-login-weibo"></i>发布文章</a></dd>
+                            <dd><a href="/article/art_cate.html" target="fm"><i class="layui-icon layui-icon-login-wechat"></i>文章类别</a></dd>
+                            <dd><a href="/article/art_list.html" target="fm"><i class="layui-icon layui-icon-login-qq"></i>文章列表</a></dd>
+                            <dd><a href="/article/art_pub.html" target="fm"><i class="layui-icon layui-icon-login-weibo"></i>发布文章</a></dd>
                         </dl>
                     </li>
                     <li class="layui-nav-item">
@@ -69,7 +70,7 @@
                         <dl class="layui-nav-child">
                             <dd><a href="user/user_info.html" target="fm"><i class="layui-icon layui-icon-login-wechat"></i>基本资料</a></dd>
                             <dd><a href="user/user_avatar.html" target="fm"><i class="layui-icon layui-icon-login-qq"></i>更换头像</a></dd>
-                            <dd><a href="/user/user.pwd.html"><i class="layui-icon layui-icon-login-weibo"></i>重置密码</a></dd>
+                            <dd><a href="/user/user.pwd.html" target="fm"><i class="layui-icon layui-icon-login-weibo"></i>重置密码</a></dd>
                         </dl>
                     </li>
                 </ul>
